@@ -1,4 +1,12 @@
-﻿zg 18.12.2014 17:04:23 +0200 - build 4220
+﻿drkns 20.12.2014 14:12:21 +0200 - build 4221
+
+1. Ошибка при импорте настроек.
+
+2. Неудачное сохранение tree3.far при выходе могло приводить к зависанию.
+
+3. Рефакторинг.
+
+zg 18.12.2014 17:04:23 +0200 - build 4220
 
 1. проблемы с файлами, у которых первый символ в имени ゝ.
 
